--- a/releng/war-all/.settings/org.eclipse.wst.common.component
+++ b/releng/war-all/.settings/org.eclipse.wst.common.component
@@ -50,7 +50,10 @@
         <dependent-module archiveName="dirigible-runtime-registry-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-runtime-registry/dirigible-runtime-registry">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="dirigible-runtime-workspaces-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-runtime-workspaces/dirigible-runtime-workspaces">
+        <dependent-module archiveName="dirigible-runtime-ide-workspaces-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-runtime-ide-workspaces/dirigible-runtime-ide-workspaces">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="dirigible-commons-process-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-commons-process/dirigible-commons-process">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="dirigible-engine-api-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-engine-api/dirigible-engine-api">
@@ -71,7 +74,10 @@
         <dependent-module archiveName="dirigible-engine-js-v8-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-engine-js-v8/dirigible-engine-js-v8">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="content-api-http-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/content-api-http/content-api-http">
+        <dependent-module archiveName="dirigible-content-api-http-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-content-api-http/dirigible-content-api-http">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="dirigible-content-ide-terminal-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-content-ide-terminal/dirigible-content-ide-terminal">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/dirigible-war-all/target/classes"/>
