--- a/releng/war-all/.settings/org.eclipse.wst.common.component
+++ b/releng/war-all/.settings/org.eclipse.wst.common.component
@@ -29,6 +29,9 @@
         <dependent-module archiveName="dirigible-api-db-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/API - Facade - db/API - Facade - db">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="dirigible-api-io-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/API - Facade - io/API - Facade - io">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="dirigible-repository-api-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Repository - API/Repository - API">
             <dependency-type>uses</dependency-type>
         </dependent-module>
@@ -150,6 +153,9 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="dirigible-api-javascript-db-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/API - Javascript - db/API - Javascript - db">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="dirigible-api-javascript-io-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/API - Javascript - io/API - Javascript - io">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="dirigible-ide-core-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/IDE - Core/IDE - Core">
