--- a/releng/server-all/.settings/org.eclipse.wst.common.component
+++ b/releng/server-all/.settings/org.eclipse.wst.common.component
@@ -122,6 +122,9 @@
         <dependent-module archiveName="dirigible-runtime-ide-git-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Runtime - IDE - Git/Runtime - IDE - Git">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="dirigible-runtime-ide-generation-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Runtime - IDE - Generation/Runtime - IDE - Generation">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="dirigible-engine-api-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Engine - API/Engine - API">
             <dependency-type>uses</dependency-type>
         </dependent-module>
