constraints support added to table definition and sql builders

--- a/releng/server-all/.settings/org.eclipse.wst.common.component
+++ b/releng/server-all/.settings/org.eclipse.wst.common.component
@@ -32,6 +32,9 @@
         <dependent-module archiveName="dirigible-api-io-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/API - Facade - io/API - Facade - io">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="dirigible-api-messaging-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/API - Facade - messaging/API - Facade - messaging">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="dirigible-repository-api-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Repository - API/Repository - API">
             <dependency-type>uses</dependency-type>
         </dependent-module>
@@ -168,6 +171,9 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="dirigible-api-javascript-io-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/API - Javascript - io/API - Javascript - io">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="dirigible-api-javascript-messaging-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/API - Javascript - messaging/API - Javascript - messaging">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="dirigible-ide-core-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/IDE - Core/IDE - Core">
